@@ -13,3 +13,4 @@ pygame:
 mac default icon
 search libs e.g. SDL_ttf-2.0 before SDL_ttf
 24-bit don't assume RGB, could be BGR.
+default icon and font in py2exe
